objects/Loyalty_Program__c.object
<CustomObject>
    <description>Contains Loyalty Program information (program, related customer, point amounts...) from MAKE UP FOR EVER systems; is alimented by Loyalty Inbound Flow.</description>
    <label>Loyalty Program</label>
    <nameField>
        <displayFormat>LOY-{000000}</displayFormat>
        <label>Loyalty Program ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loyalty Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Loyalty Program brand - &quot;0M&quot; for Make Up For Ever.</description>
        <label>Brand</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Contact email from the customer associated to the Loyalty Program record. Used in Marketing Cloud for Loyalty Program mirrored data extension.</description>
        <formula>Customer__r.PersonContact.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Loyalty Program related Customer. Not mandatory - if related Customer was not found, Customer Id is stored on 	Customer_Id__c field in order to perform asynchronous parenting.</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loyalty Programs</relationshipLabel>
        <relationshipName>Loyalty_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <description>Contact Id from the customer associated to the Loyalty Program record. Used in Marketing Cloud for Loyalty Program mirrored data extension.</description>
        <formula>CASESAFEID(Customer__r.PersonContact.Id)</formula>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <description>Technical field - stores Customer Id in order to perform asynchronous record parenting.</description>
        <label>Customer Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Technical field - Loyalty Program record unique consolidated Id (Market + Customer Code + Program Code + Last Modification date).</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Member_Type__c</fullName>
        <label>Member Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N1</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>Loyalty Program Country code - [TO UPDATE].</description>
        <label>Country Code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creation_POS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Loyalty Program creation POS - parenting done based on Store Code (&quot;Store&quot; object record name).</description>
        <label>Creation POS</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipLabel>Loyalty Programs</relationshipLabel>
        <relationshipName>Loyalty_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loyalty_Action__c</fullName>
        <description>Indicates if received record corresponds to update (&quot;U&quot;) or delete (&quot;D&quot;) in source system. Insertion is considered as an update.</description>
        <label>Loyalty Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Creation_Channel__c</fullName>
        <description>Loyalty Program creation channel - corresponds to &quot;Origin system&quot;.</description>
        <label>Creation Channel</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INFOWARE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loyalty_End_Date__c</fullName>
        <description>Loyalty Program end date.</description>
        <label>Loyalty End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loyalty_Start_Date__c</fullName>
        <description>Loyalty Program start date.</description>
        <label>Loyalty Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Excluded_from_MC__c</fullName>
        <description>Technical field - True if the Loyalty Program record is not related to a customer. Used in Marketing Cloud to prevent record synchronization in data sources.</description>
        <formula>IF(ISBLANK(Customer__r.Id), true, false)</formula>
        <label>Is Excluded from MC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loyalty_Creation_Date__c</fullName>
        <description>Loyalty Program creation date.</description>
        <label>Loyalty Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Membership_Active_Flag__c</fullName>
        <label>Membership Active Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loyalty_Modification_Date__c</fullName>
        <description>Loyalty Program modification date. Used in &quot;External Id&quot; field for consolidated record Id generation.</description>
        <label>Loyalty Modification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loyalty_Points_Total_Amount__c</fullName>
        <label>Loyalty Points Total Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loyalty_Points_Redeem_Amount__c</fullName>
        <label>Loyalty Points Redeem Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loyalty_Points_Current_Amount__c</fullName>
        <label>Loyalty Points Current Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>